# ExtendedServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-windows.bat
advancedserver/: CMakeLists.txt  CharSelect.c  Config.c  Game.c  Lib.c  Lobby.c  Log.c  Maps.c  Mapvote.c  Moderation.c  Player.c  Plugin.c  Results.c  Server.c
advancedserver/entities/: Act9Wall.c  DTBall.c  DTStalactits.c  HDDoor.c  HillThunder.c  KAFSpeedBox.c  LCChain.c  LCEye.c  NAPIce.c  NotPerfect.c  RMZSlug.c  Ring.c  SpkieController.c  TCAcid.c  TailsProjectile.c  YouCantRun.c
advancedserver/maps/: Act9.c  NastyParadise.c  PricelessFreedom.c  RavineMist.c
advancedserver/ui/: Button.c  Image.c  Label.c  Main.c  MapList.c  MapListPreset.c  PingPreset.c  PlayerList.c  Resources.c  TButton.c
include/: Config.h  Log.h  Moderation.h  Plugin.h  Server.h  States.h
include/entities/: TailsProjectile.h
include/ui/: Components.h  Font.h  Font.png~  Main.h  Resources.h  Spritesheet.h
plugins/: README.md
plugins/ExtendedCore/: abilities.c  abilities.h  accounts.c  accounts.h  anticheat.c  anticheat.h  chat.c  chat.h  locale.c  locale.h  menu.c  menu.h  peer.h  plugin_main.c  promo.c  promo.h  sha256.c  sha256.h  skills.c  skills.h
